--- a/backEnd/views/products/index.ejs
+++ b/backEnd/views/products/index.ejs
@@ -16,6 +16,7 @@
       integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
       crossorigin="anonymous"
     ></script>
+    <!-- <link rel="stylesheet" href="renterForm.css" /> -->
   </head>
   <body>
     <h2>Heeyy</h2>
